@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
 <UpdateVersion xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-  <Version>525</Version>
-  <Date>2013-02-19T00:00:00+05:30</Date>
+  <Version>545</Version>
+  <Date>2015-07-27T00:00:00+05:30</Date>
 </UpdateVersion>
